# rs_imsg

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: client.rs  env.rs  error.rs  lib.rs  paths.rs  time.rs  types.rs
src/cli/: mod.rs
src/db/: mod.rs  store.rs  stub_store.rs
src/http/: mod.rs  server.rs
src/private_api/: bridge.rs  ipc.rs  launcher.rs  paths.rs  sip.rs
src/rpc/: mod.rs
src/send/: apple.rs  mod.rs  stub.rs
src/watch/: mac.rs  stub.rs
tests/: send_live.rs
