[package]
name = "rs_imsg"
version = "0.1.0"
edition = "2021"
description = "Library-first iMessage toolkit for macOS — chat.db reads, live watch, AppleScript send, JSON-RPC CLI"
license = "MPL-2.0"
repository = "https://github.com/undivisible/rs_imsg"

[lib]
name = "rs_imsg"
path = "src/lib.rs"

[[bin]]
name = "rs_imsg"
path = "src/bin/rs_imsg.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:clap", "dep:tracing-subscriber"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", optional = true, features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
notify = "8"

[dev-dependencies]
tempfile = "3"
