[package]
name = "rs_imessage"
version = "0.1.0"
edition = "2021"
description = "Unstable, still in development — iMessage toolkit for macOS (chat.db, watch, send, optional bridge)"
license = "MPL-2.0"
repository = "https://github.com/undivisible/rs_imessage"
readme = "README.md"
keywords = ["imessage", "macos", "messages"]
categories = ["api-bindings", "os::macos-apis"]

[lib]
name = "rs_imessage"
path = "src/lib.rs"

[[bin]]
name = "rs_imessage"
path = "src/bin/rs_imessage.rs"
required-features = ["cli"]

[features]
default = []
serve = ["dep:axum", "dep:tokio-stream"]
cli = ["dep:clap", "dep:tracing-subscriber", "serve"]
private-api = ["dep:uuid"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", optional = true, features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
axum = { version = "0.7", optional = true, features = ["macros"] }
tokio-stream = { version = "0.1", optional = true, features = ["sync"] }

uuid = { version = "1", features = ["v4"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
notify = "8"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "send_live"
path = "tests/send_live.rs"
required-features = ["cli"]
